# nayan-tqdm

./: LICENSE  README.md  demo.py  nayan-tqdm.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
nayan_tqdm/: __init__.py  core.py  engine.py  fallback.py  formatters.py  models.py  registry.py  renderer.py  terminal.py  utils.py
nayan_tqdm/themes/: __init__.py  _bear.py  _bee.py  _cat_mouse.py  _cat_play.py  _cat_yarn.py  _construction.py  _cry.py  _deal_with_it.py  _disapproval.py  _disco.py  _double_flip.py  _finger_guns.py  _fire.py  _flex.py  _garden.py  _heartbeat.py  _hype.py  _lenny.py  _lightning.py  _love.py  _music.py  _nyan.py  _pasta.py  _rage.py  _rocket.py  _run.py  _shrug.py  _sparkles.py  _table_flip.py  _table_rage.py  _table_unflip.py  _train.py  _uwu.py  _wizard.py  _zen.py
nyanbar/: __init__.py  core.py  engine.py  fallback.py  formatters.py  models.py  registry.py  renderer.py  terminal.py
nyanbar/themes/: __init__.py  _aurora.py  _candy.py  _cat_bounce.py  _cat_mouse.py  _cat_play.py  _cat_sleepy.py  _cat_smug.py  _cat_walk.py  _cat_yarn.py  _coffee.py  _construction.py  _disco.py  (+15 more)
tests/: conftest.py  test_core.py  test_engine.py  test_fallback.py  test_fallbacks.py  test_formatters.py  test_integration.py  test_models.py  test_registry.py  test_renderer.py  test_terminal.py  test_themes.py  test_themes_cat.py  test_themes_fish.py  test_themes_nyan.py  test_themes_rocket.py  test_thread.py  test_tqdm_compat.py  test_utils.py
(+52 files in other folders)
