[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nayan-tqdm"
version = "2.0.0"
description = "Animated progress bars with nyan cat and friends -- a drop-in tqdm replacement"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Parker Williams" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = ["progress", "bar", "tqdm", "nyan", "cat", "animation", "terminal"]

[project.urls]
Homepage = "https://github.com/ParkerWilliams/nayan-tqdm"
Repository = "https://github.com/ParkerWilliams/nayan-tqdm"

[project.optional-dependencies]
dev = ["pytest>=9.0", "mypy>=1.13"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
